syntax = "proto3";
option go_package = "gopaste/proto;paste";
package paste;

service UserService {
    rpc Register(RegisterRequest) returns (UserResponse);
    rpc Login(LoginRequest) returns (TokenResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message UserResponse {
    string id = 1;
    string username = 2;
}

message TokenResponse {
    string token = 1;
}

message LogoutRequest {
}

message LogoutResponse {
    bool success = 1;
}